--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -20,10 +20,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 22    # 或改为 20.10+
+          node-version: 22
           cache: npm
       - run: npm ci
       - run: npm run build
+      - run: npx next export -o out
       - uses: actions/upload-pages-artifact@v3
         with:
           path: out
